objects/MWA1_Answer__c.object
<CustomObject>
    <description>An answer is specific to a question (entry) or a given submission.</description>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MVR10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVR10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MVR1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVR1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MVR2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVR2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MWAQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>MWA1_Entry__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>R00N30000001ldyyEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NR__c</fullName>
        <label>Numeric Response</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVR__c</fullName>
        <label>Text Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>MWA1_Submission__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>R00N30000001ldyvEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>